# rust-physics-engine

./: Cargo.toml  README.md  config.toml
src/: config.rs  lib.rs  main.rs  spatial_hash.rs
src/common/: config.rs  fps_counter.rs  mod.rs
src/version_2d/: main.rs  spatial_hash.rs
src/version_3d/: main.rs  spatial_hash_3d.rs
